# MojProjekt

./: .env.example  README.md  docker-compose.yml
api/: pyproject.toml  requirements.txt
api/alembic/versions/: 001_init_users.py  002_restaurants.py  003_menu_items.py  004_orders.py
api/app/: main.py  seed.py
api/app/core/: config.py  deps.py  jwt.py  phases.py
api/app/models/: __init__.py  menu_item.py  order.py  order_item.py  restaurant.py  user.py
api/app/repositories/: __init__.py  menu_repo.py  order_repo.py  restaurant_repo.py  user_repo.py
api/app/routers/: auth.py  menu.py  orders.py  restaurants.py  users.py
api/app/schemas/: auth.py  menu_item.py  order.py  restaurant.py  user.py
api/app/services/: __init__.py  auth_service.py  menu_service.py  order_service.py  restaurant_service.py  user_service.py
api/scripts/: setup_db.py
api/tests/: __init__.py  conftest.py  requirements.txt  test_auth.py  test_orders.py  test_restaurants.py
web/: index.html  package-lock.json  package.json  railway.json  server.js  tsconfig.json
web/src/components/: FormaPolje.vue  Gumb.vue  Modal.vue  Navigacija.vue  Obavijest.vue  Obavijesti.vue  StatusBadge.vue  Tablica.vue
web/src/layouts/: LayoutAplikacija.vue  LayoutGost.vue
web/src/router/: index.ts
web/src/services/: api.ts  jelovnik.ts  korisnici.ts  narudzbe.ts  restorani.ts
web/src/stores/: auth.ts
web/src/styles/: globalno.css  reset.css  tokens.css
web/src/types/: index.ts  korisnik.ts  narudzba.ts  restoran.ts  stavka_jelovnika.ts
web/src/views/: NepoznatoView.vue  PrijavaView.vue  (+1 more)
(+14 files in other folders)
