[project]
name = "food-delivery-api"
version = "0.1.0"
description = "Food Delivery API"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.black]
target-version = ["py311"]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning:pytest_asyncio"]
